--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Snake Game</title>
 </head>
 <body>
+     <h1>SNAKE GAME</h1>
+     <header id="cabecalho-principal">
+         <div id="pontuacao-game">
+             <img src="img/moeda.png" height="20px" alt="moeda" srcset="">Moedas:&nbsp;&nbsp;<span id="pontuacao-atual">0</span>
+         </div>
+
+     </header>
+
      <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
