Implementado a pontuação dinamica e velocidade dinamica que aumenta conforme pontuação aumenta

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <h1>SNAKE GAME</h1>
      <header id="cabecalho-principal">
          <div id="pontuacao-game">
-             <img src="img/moeda.png" height="20px" alt="moeda" srcset="">Moedas:&nbsp;&nbsp;<span id="pontuacao-atual">0</span>
+             <img src="img/moeda.png" height="20px" alt="moeda" srcset="">Moedas:&nbsp;&nbsp;<span id="pontuacao-atual"></span>
          </div>
 
      </header>
